Added starter code from lesson

--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Alex Blunt">
-        <meta name="description" content="This is my Sparta Profile">
-        <link href="profileStyle.css" rel="stylesheet"/>
-        <title>My Profile</title>
-    </head>
-    <body>
-        <h1>My Profile</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Alex Blunt">
+    <meta name="description" content="This is my Sparta Profile">
+    <link href="profileStyle.css" rel="stylesheet" />
+    <title>My Profile</title>
+</head>
+
+<body>
+    <nav>
+        <a href="index.html">My Profile</a>
+    </nav>
+    <header>
+        <h1>Alexander Blunt</h1>
+        <img alt="A picture of me" href="images/profilepic.png">
+    </header>
+    <h2>My Profile</h2>
+    <h4>My Skills</h4>
+    <h4>My Hobbies</h4>
+    <h3>Search for news</h3>
+    <form action="https://www.bbc.co.uk/search">
+        <label for="my-search">Search For</label>
+        <input id="my-search" name="q" value="Birmingham">
+        <input class="button" type="submit" value="submit">
+    </form>
+    <footer>
+        <small>Copyright &#169; Alexander Blunt 2023 <cite>Alexander Blunt</cite></small>
+    </footer>
+</body>
+
 </html>
