Added more CSS content

--- a/starter_code/Index.html
+++ b/starter_code/Index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="profileStyle.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="container">
     <nav>
         <ul>
             <li><a href="index.html">Go to profile</a></li>
@@ -24,7 +24,7 @@
         <p>An <em>awesome</em> and <strong>amazing</strong> website demonstration</p>
     </header>
 
-    <section>
+    <section class="box-1">
         <h4>My Skills</h4>
         <p>Agile, Scrum and similar methodologies</p>
         <p>Cooking up sweet code</p>
@@ -32,12 +32,12 @@
     <section>
         <h4>My Hobbies</h4>
         <ul>
-            <li>French</li>
-            <li>Video Games</li>
+            <li id="french">French</li>
+            <li class="example">Video Games</li>
             <li>Hiking</li>
         </ul>
     </section>
-    <section>
+    <section class="box-1">
         <h4>Goals</h4>
         <ol>
             <li>Become a great consultant</li>
