--- a/starter_code/projects.html
+++ b/starter_code/projects.html
@@ -6,7 +6,7 @@
     <title>My projects</title>
     <link href="profileStyle.css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
     <nav>
         <ul>
             <li><a href="index.html">Go to profile</a></li>
@@ -14,7 +14,7 @@
             <li><a href="https://www.linkedin.com/in/peter-bellaby-40b93022b/" target="_blank">My LinkedIn</a></li>
         </ul>
     </nav>
-    <section>
+    <section class="box-2">
         <h1>Projects</h1>
         <table>
             <thead>
