--- a/starter_code/projects.html
+++ b/starter_code/projects.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container">
     <nav>
-        <ul>
+        <ul class="flex-container">
             <li><a href="index.html">Go to profile</a></li>
             <li><a href="projects.html">Go to projects</a></li>
             <li><a href="https://www.linkedin.com/in/peter-bellaby-40b93022b/" target="_blank">My LinkedIn</a></li>
